--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,8 @@
 version : '3'
 
 services: 
-  webserver:
-  image: newassignment
+  newassignment:
+  image: ${newassignment}
+  restart: always
     ports:
        - "30022:30022 "
